--- a/sass/base.scss
+++ b/sass/base.scss
@@ -16,7 +16,10 @@ $bg-button-dark: #505050;
 $header-dark: #000000;
 $header-light: #f5f5f5;
 $text-dark: #373b44;
-$text-light: #f5f5f5;   
+$text-light: #f5f5f5;
+
+$ham-dark: #373b44; 
+$ham-light: #f7f7f7;
 
 $bg-gradient: #000000;
 $box-shadow: #000000;
